
2009-09-17  Oliver Hader  <oliver@typo3.org>

	* Cleanup: Set SVN properties
	* Fixed bug #11985: Optimize disposal of t3lib_PageRenderer (thanks to Steffen Kamper)
	* Added feature #11669: Provide a reason for why $TSFE->set_no_cache() has been triggered (thanks to Michael Stucki)
	* Added feature #2278: Add hook to t3lib_TCEmain::checkModifyAccessList() (thanks to Michael Stucki)

2009-09-17  Sebastian Kurfuerst  <sebastian@typo3.org>

	* Raised Extbase and Fluid Versions from 0.9.5 to 0.9.6

2009-09-16  Oliver Hader  <oliver@typo3.org>

	* Fixed bug #11831: Remove reference operators for objects
	* Fixed bug #11824: Links accross Domains not known by linkData and therefore also RealURL (thanks to Daniel Poetzinger)

2009-09-16  Jeff Segars  <jeff@webempoweredchurch.org>

	* Added feature #11819: Added inline Javascript rendering type for TYPO3AJAX
	* Fixed bug #11361: Backend TYPO3 AJAX-Interface: json encoded result empty if it contains non-utf-8 characters (thanks to Benjamin Mack)

2009-09-16  Rupert Germann  <rupi@gmx.li>

	* Fixed bug #11905: Extension Manager is not translatable (part 3) (thanks to Christopher Stelmaszyk)
	* Added feature #11927: Use suggest feature in system extensions
	* Fixed bug #11967: allowSystemInstall should be a checkbox and not an input field (thanks to Georg Ringer)

2009-09-16  Steffen Kamper  <info@sk-typo3.de>

	* Fixed bug #11899: Make resizable and flexible textareas configurable, set default maxHeight to 600
	* Fixed bug #11965: Content Element Media needs stdWrap to change path (e.g. for DAM) (thanks to Georg Ringer)
	* Fixed bug #11902: [MediaCE] works only with absRefPrefix and doesn't support flowplayer

2009-09-15  Francois Suter  <francois@typo3.org>

	* Feature #11555: Integrated extension "gabriel" into TYPO3 Core as sysext "scheduler"

2009-09-15  Stanislas Rolland  <typo3@sjbr.ca>

	* Fixed bug #11915: htmlArea RTE: superfluous span tags in content after server-based cleaning on paste operation