@@ -13,6 +13,7 @@
 	* Fixed bug #11985: Optimize disposal of t3lib_PageRenderer (thanks to Steffen Kamper)
 	* Added feature #11669: Provide a reason for why $TSFE->set_no_cache() has been triggered (thanks to Michael Stucki)
 	* Added feature #2278: Add hook to t3lib_TCEmain::checkModifyAccessList() (thanks to Michael Stucki)
+	* Follow-up to feature #2278: Added unit tests for the new checkModifyAccessList hook
 
 2009-09-17  Sebastian Kurfuerst  <sebastian@typo3.org>
 
